--- a/JobSEServer/appsettings.json
+++ b/JobSEServer/appsettings.json
@@ -23,5 +23,8 @@
         "ExpireTime": "2022-01-01 00:00:00"
       }
     ]
+  },
+  "ConnectionStrings": {
+    "JobSEDb": "Database=jobse;host=120.27.220.61;Port=3306;Username=root;Password=jobse;"
   }
 }
