--- a/JobSEServer/appsettings.json
+++ b/JobSEServer/appsettings.json
@@ -9,7 +9,9 @@
   "AllowedHosts": "*",
   "Urls": "http://*:5000",
   "ElasticConfig": {
-    "Url": "http://localhost:9200",
+    "Url": "http://es-cn-zvp29etj2000kbv21.public.elasticsearch.aliyuncs.com:9200",
+    "Username": "elastic",
+    "Password": "Aldguo123",
     "CompanyIndexName": "companyindex",
     "PositionIndexName": "positionindex"
   },
