--- a/JobSEServer/JobSEServer.csproj
+++ b/JobSEServer/JobSEServer.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Elasticsearch.Net" Version="7.13.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Logging.TraceSource" Version="5.0.0" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.3.1" />
     <PackageReference Include="NEST" Version="7.13.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
